Fix for help propertie with dialogues. Hint z-index. Rapid admin buttons are not disabled in designer.

--- a/WebContent/styles/designer.css
+++ b/WebContent/styles/designer.css
@@ -887,7 +887,7 @@ Hint style
 	padding: 10px;
 	opacity: 0.9;
 	box-shadow: 5px 5px 5px #888;
-	z-index:10011;
+	z-index:10015;
 }
 
 /*
